--- a/index.html
+++ b/index.html
@@ -14,11 +14,67 @@
   <body class="page">
     <div class="page__content">
       <header class="header">
-        <img
-          src="./images/header.png"
-          alt="Around the U.S. vector image"
+        <svg
           class="header__logo"
-        />
+          width="173"
+          height="33"
+          viewBox="0 0 173 33"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M4.19039 32.6066L6.59219 25.7282H16.8126L19.2017 32.6066H23.3921L13.9765 6.61607H9.41559L0 32.6066H4.19039ZM7.74199 22.4287L11.6002 11.337H11.8046L15.6628 22.4287H7.74199Z"
+            fill="white"
+          />
+          <path
+            d="M26.8638 32.6066H30.6837V20.7027C30.6837 18.1519 32.6639 16.3118 35.3723 16.3118C36.1644 16.3118 37.0587 16.4514 37.3653 16.5402V12.9107C36.9821 12.8599 36.2283 12.8218 35.7428 12.8218C33.4432 12.8218 31.4758 14.1163 30.7604 16.2102H30.556V13.1137H26.8638V32.6066Z"
+            fill="white"
+          />
+          <path
+            d="M48.2342 33C53.766 33 57.3815 28.9771 57.3815 22.949C57.3815 16.8828 53.766 12.8599 48.2342 12.8599C42.7023 12.8599 39.0868 16.8828 39.0868 22.949C39.0868 28.9771 42.7023 33 48.2342 33ZM48.2469 29.8146C44.6314 29.8146 42.9451 26.68 42.9451 22.9363C42.9451 19.2052 44.6314 16.0326 48.2469 16.0326C51.8369 16.0326 53.5232 19.2052 53.5232 22.9363C53.5232 26.68 51.8369 29.8146 48.2469 29.8146Z"
+            fill="white"
+          />
+          <path
+            d="M74.0759 24.5226C74.0887 27.8349 71.6103 29.4085 69.464 29.4085C67.1005 29.4085 65.4652 27.708 65.4652 25.0556V13.1137H61.6453V25.5125C61.6453 30.3476 64.3154 32.8604 68.0842 32.8604C71.0353 32.8604 73.0411 31.3121 73.9482 29.2309H74.1526V32.6066H77.9086V13.1137H74.0759V24.5226Z"
+            fill="white"
+          />
+          <path
+            d="M86.8611 21.0327C86.8611 17.9235 88.7774 16.1468 91.4347 16.1468C94.0282 16.1468 95.5996 17.8346 95.5996 20.6647V32.6066H99.4195V20.2078C99.4195 15.3853 96.7494 12.8599 92.7378 12.8599C89.7867 12.8599 87.8576 14.2178 86.9505 16.2864H86.7078V13.1137H83.0412V32.6066H86.8611V21.0327Z"
+            fill="white"
+          />
+          <path
+            d="M111.888 32.9873C115.466 32.9873 116.871 30.8172 117.561 29.5735H117.88V32.6066H121.611V6.61607H117.791V16.2737H117.561C116.871 15.0681 115.568 12.8599 111.914 12.8599C107.174 12.8599 103.687 16.5783 103.687 22.8982C103.687 29.2055 107.123 32.9873 111.888 32.9873ZM112.732 29.7512C109.321 29.7512 107.545 26.7689 107.545 22.8601C107.545 18.9895 109.282 16.0833 112.732 16.0833C116.066 16.0833 117.855 18.7864 117.855 22.8601C117.855 26.9592 116.028 29.7512 112.732 29.7512Z"
+            fill="white"
+          />
+          <path
+            d="M126.6 1.0491H129.343V8.78195H130.399V1.0491H133.141V0.118446H126.6V1.0491Z"
+            fill="white"
+          />
+          <path
+            d="M135.64 4.87322C135.64 3.73952 136.368 3.09653 137.36 3.09653C138.306 3.09653 138.876 3.68876 138.876 4.72093V8.78195H139.881V4.65325C139.881 2.98231 138.987 2.19972 137.65 2.19972C136.619 2.19972 136.032 2.62697 135.725 3.29958H135.64V0.118446H134.635V8.78195H135.64V4.87322Z"
+            fill="white"
+          />
+          <path
+            d="M144.463 8.91732C145.791 8.91732 146.762 8.2574 147.069 7.27599L146.098 7.00526C145.842 7.68209 145.25 8.02051 144.463 8.02051C143.283 8.02051 142.47 7.2633 142.423 5.87156H147.171V5.44853C147.171 3.02884 145.723 2.19972 144.36 2.19972C142.589 2.19972 141.413 3.58723 141.413 5.5839C141.413 7.58057 142.572 8.91732 144.463 8.91732ZM142.423 5.00859C142.491 3.99756 143.211 3.09653 144.36 3.09653C145.451 3.09653 146.149 3.90873 146.149 5.00859H142.423Z"
+            fill="white"
+          />
+          <path
+            d="M157.932 0.118446V5.77003C157.932 7.0391 157.055 7.95283 155.599 7.95283C154.142 7.95283 153.265 7.0391 153.265 5.77003V0.118446H152.209V5.85463C152.209 7.63133 153.546 8.93424 155.599 8.93424C157.651 8.93424 158.988 7.63133 158.988 5.85463V0.118446H157.932Z"
+            fill="white"
+          />
+          <path
+            d="M161.284 8.84964C161.705 8.84964 162.05 8.50699 162.05 8.08819C162.05 7.6694 161.705 7.32675 161.284 7.32675C160.862 7.32675 160.517 7.6694 160.517 8.08819C160.517 8.50699 160.862 8.84964 161.284 8.84964Z"
+            fill="white"
+          />
+          <path
+            d="M168.76 2.28432H169.782C169.735 0.977182 168.521 0 166.835 0C165.165 0 163.854 0.964492 163.854 2.41969C163.854 3.58723 164.705 4.28099 166.068 4.67017L167.141 4.97475C168.061 5.22856 168.879 5.55006 168.879 6.41302C168.879 7.3606 167.959 7.98667 166.75 7.98667C165.71 7.98667 164.791 7.5298 164.705 6.54839H163.615C163.717 7.96975 164.876 8.93424 166.75 8.93424C168.76 8.93424 169.901 7.83438 169.901 6.42994C169.901 4.80554 168.351 4.28099 167.448 4.0441L166.562 3.8072C165.915 3.638 164.876 3.29958 164.876 2.36893C164.876 1.5398 165.642 0.93065 166.801 0.93065C167.857 0.93065 168.657 1.42982 168.76 2.28432Z"
+            fill="white"
+          />
+          <path
+            d="M172.233 8.84964C172.655 8.84964 173 8.50699 173 8.08819C173 7.6694 172.655 7.32675 172.233 7.32675C171.812 7.32675 171.467 7.6694 171.467 8.08819C171.467 8.50699 171.812 8.84964 172.233 8.84964Z"
+            fill="white"
+          />
+        </svg>
       </header>
       <main class="content">
         <section class="profile">
@@ -29,35 +85,25 @@
           />
           <div class="profile__info">
             <h1 class="profile__name">Jacques Cousteau</h1>
-            <button class="profile__edit-button" type="button">
-              <svg
-                width="10"
-                height="10"
-                viewBox="0 0 10 10"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M10 1.32827L2.60377 8.7666L1.28302 7.41936L8.66038 0L10 1.32827ZM0 10L1.96226 9.41177L0.584906 8.08349L0 10Z"
-                  fill="white"
-                />
-              </svg>
+            <button
+              aria-label="edit"
+              class="profile__edit-button"
+              type="button"
+            >
+              <img
+                src="./images/edit-button.svg"
+                alt="pencil icon"
+                class="edit-button"
+              />
             </button>
             <h2 class="profile__description">Explorer</h2>
           </div>
-          <button class="profile__add-button" type="button">
-            <svg
-              width="22"
-              height="22"
-              viewBox="0 0 22 22"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M22 9.77778H12.2222V0H9.77778V9.77778H0V12.2222H9.77778V22H12.2222V12.2222H22V9.77778Z"
-                fill="white"
-              />
-            </svg>
+          <button aria-label="add" class="profile__add-button" type="button">
+            <img
+              src="./images/add-button.svg"
+              alt="plus icon"
+              class="add-button"
+            />
           </button>
         </section>
         <section class="gallery">
@@ -70,19 +116,16 @@
               />
               <div class="card__content">
                 <h2 class="card__text">Yosemite Valley</h2>
-                <button class="card__like-button" type="button">
-                  <svg
-                    width="21"
-                    height="18"
-                    viewBox="0 0 21 18"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M19.3764 9.27081C21.5412 7.14636 21.5412 3.69676 19.3764 1.59334C17.2115 -0.531113 13.6964 -0.531113 11.5315 1.59334L10.4812 2.64505L9.43098 1.61437C7.26614 -0.531113 3.75096 -0.531113 1.60755 1.59334C0.557285 2.62401 0 3.99124 0 5.44259C0 6.89395 0.578719 8.26117 1.60755 9.29185L10.4812 18L19.3764 9.27081ZM1.37178 5.44259C1.37178 4.34882 1.80046 3.33918 2.59352 2.58195C3.40801 1.78265 4.45828 1.383 5.50855 1.383C6.55882 1.383 7.60909 1.78265 8.42358 2.58195L10.4812 4.58019L12.5389 2.56091C14.1465 0.983348 16.7829 0.983348 18.369 2.56091C19.1406 3.31814 19.5907 4.32778 19.5907 5.42156C19.5907 6.51534 19.162 7.52498 18.369 8.28221L10.4812 16.0438L2.59352 8.30324C1.82189 7.52498 1.37178 6.51534 1.37178 5.44259Z"
-                      fill="black"
-                    />
-                  </svg>
+                <button
+                  aria-label="like"
+                  class="card__like-button"
+                  type="button"
+                >
+                  <img
+                    src="./images/heart.svg"
+                    alt="heart icon"
+                    class="like-button"
+                  />
                 </button>
               </div>
             </li>
@@ -94,19 +137,16 @@
               />
               <div class="card__content">
                 <h2 class="card__text">Lake Louise</h2>
-                <button class="card__like-button" type="button">
-                  <svg
-                    width="21"
-                    height="18"
-                    viewBox="0 0 21 18"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M19.3764 9.27081C21.5412 7.14636 21.5412 3.69676 19.3764 1.59334C17.2115 -0.531113 13.6964 -0.531113 11.5315 1.59334L10.4812 2.64505L9.43098 1.61437C7.26614 -0.531113 3.75096 -0.531113 1.60755 1.59334C0.557285 2.62401 0 3.99124 0 5.44259C0 6.89395 0.578719 8.26117 1.60755 9.29185L10.4812 18L19.3764 9.27081ZM1.37178 5.44259C1.37178 4.34882 1.80046 3.33918 2.59352 2.58195C3.40801 1.78265 4.45828 1.383 5.50855 1.383C6.55882 1.383 7.60909 1.78265 8.42358 2.58195L10.4812 4.58019L12.5389 2.56091C14.1465 0.983348 16.7829 0.983348 18.369 2.56091C19.1406 3.31814 19.5907 4.32778 19.5907 5.42156C19.5907 6.51534 19.162 7.52498 18.369 8.28221L10.4812 16.0438L2.59352 8.30324C1.82189 7.52498 1.37178 6.51534 1.37178 5.44259Z"
-                      fill="black"
-                    />
-                  </svg>
+                <button
+                  aria-label="like"
+                  class="card__like-button"
+                  type="button"
+                >
+                  <img
+                    src="./images/heart.svg"
+                    alt="heart icon"
+                    class="like-button"
+                  />
                 </button>
               </div>
             </li>
@@ -118,19 +158,16 @@
               />
               <div class="card__content">
                 <h2 class="card__text">Bald Mountains</h2>
-                <button class="card__like-button" type="button">
-                  <svg
-                    width="21"
-                    height="18"
-                    viewBox="0 0 21 18"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M19.3764 9.27081C21.5412 7.14636 21.5412 3.69676 19.3764 1.59334C17.2115 -0.531113 13.6964 -0.531113 11.5315 1.59334L10.4812 2.64505L9.43098 1.61437C7.26614 -0.531113 3.75096 -0.531113 1.60755 1.59334C0.557285 2.62401 0 3.99124 0 5.44259C0 6.89395 0.578719 8.26117 1.60755 9.29185L10.4812 18L19.3764 9.27081ZM1.37178 5.44259C1.37178 4.34882 1.80046 3.33918 2.59352 2.58195C3.40801 1.78265 4.45828 1.383 5.50855 1.383C6.55882 1.383 7.60909 1.78265 8.42358 2.58195L10.4812 4.58019L12.5389 2.56091C14.1465 0.983348 16.7829 0.983348 18.369 2.56091C19.1406 3.31814 19.5907 4.32778 19.5907 5.42156C19.5907 6.51534 19.162 7.52498 18.369 8.28221L10.4812 16.0438L2.59352 8.30324C1.82189 7.52498 1.37178 6.51534 1.37178 5.44259Z"
-                      fill="black"
-                    />
-                  </svg>
+                <button
+                  aria-label="like"
+                  class="card__like-button"
+                  type="button"
+                >
+                  <img
+                    src="./images/heart.svg"
+                    alt="heart icon"
+                    class="like-button"
+                  />
                 </button>
               </div>
             </li>
@@ -142,19 +179,16 @@
               />
               <div class="card__content">
                 <h2 class="card__text">Latemar</h2>
-                <button class="card__like-button" type="button">
-                  <svg
-                    width="21"
-                    height="18"
-                    viewBox="0 0 21 18"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M19.3764 9.27081C21.5412 7.14636 21.5412 3.69676 19.3764 1.59334C17.2115 -0.531113 13.6964 -0.531113 11.5315 1.59334L10.4812 2.64505L9.43098 1.61437C7.26614 -0.531113 3.75096 -0.531113 1.60755 1.59334C0.557285 2.62401 0 3.99124 0 5.44259C0 6.89395 0.578719 8.26117 1.60755 9.29185L10.4812 18L19.3764 9.27081ZM1.37178 5.44259C1.37178 4.34882 1.80046 3.33918 2.59352 2.58195C3.40801 1.78265 4.45828 1.383 5.50855 1.383C6.55882 1.383 7.60909 1.78265 8.42358 2.58195L10.4812 4.58019L12.5389 2.56091C14.1465 0.983348 16.7829 0.983348 18.369 2.56091C19.1406 3.31814 19.5907 4.32778 19.5907 5.42156C19.5907 6.51534 19.162 7.52498 18.369 8.28221L10.4812 16.0438L2.59352 8.30324C1.82189 7.52498 1.37178 6.51534 1.37178 5.44259Z"
-                      fill="black"
-                    />
-                  </svg>
+                <button
+                  aria-label="like"
+                  class="card__like-button"
+                  type="button"
+                >
+                  <img
+                    src="./images/heart.svg"
+                    alt="heart icon"
+                    class="like-button"
+                  />
                 </button>
               </div>
             </li>
@@ -166,19 +200,16 @@
               />
               <div class="card__content">
                 <h2 class="card__text">Vanoise National Park</h2>
-                <button class="card__like-button" type="button">
-                  <svg
-                    width="21"
-                    height="18"
-                    viewBox="0 0 21 18"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M19.3764 9.27081C21.5412 7.14636 21.5412 3.69676 19.3764 1.59334C17.2115 -0.531113 13.6964 -0.531113 11.5315 1.59334L10.4812 2.64505L9.43098 1.61437C7.26614 -0.531113 3.75096 -0.531113 1.60755 1.59334C0.557285 2.62401 0 3.99124 0 5.44259C0 6.89395 0.578719 8.26117 1.60755 9.29185L10.4812 18L19.3764 9.27081ZM1.37178 5.44259C1.37178 4.34882 1.80046 3.33918 2.59352 2.58195C3.40801 1.78265 4.45828 1.383 5.50855 1.383C6.55882 1.383 7.60909 1.78265 8.42358 2.58195L10.4812 4.58019L12.5389 2.56091C14.1465 0.983348 16.7829 0.983348 18.369 2.56091C19.1406 3.31814 19.5907 4.32778 19.5907 5.42156C19.5907 6.51534 19.162 7.52498 18.369 8.28221L10.4812 16.0438L2.59352 8.30324C1.82189 7.52498 1.37178 6.51534 1.37178 5.44259Z"
-                      fill="black"
-                    />
-                  </svg>
+                <button
+                  aria-label="like"
+                  class="card__like-button"
+                  type="button"
+                >
+                  <img
+                    src="./images/heart.svg"
+                    alt="heart icon"
+                    class="like-button"
+                  />
                 </button>
               </div>
             </li>
@@ -190,19 +221,16 @@
               />
               <div class="card__content">
                 <h2 class="card__text">Lago di Braies</h2>
-                <button class="card__like-button" type="button">
-                  <svg
-                    width="21"
-                    height="18"
-                    viewBox="0 0 21 18"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M19.3764 9.27081C21.5412 7.14636 21.5412 3.69676 19.3764 1.59334C17.2115 -0.531113 13.6964 -0.531113 11.5315 1.59334L10.4812 2.64505L9.43098 1.61437C7.26614 -0.531113 3.75096 -0.531113 1.60755 1.59334C0.557285 2.62401 0 3.99124 0 5.44259C0 6.89395 0.578719 8.26117 1.60755 9.29185L10.4812 18L19.3764 9.27081ZM1.37178 5.44259C1.37178 4.34882 1.80046 3.33918 2.59352 2.58195C3.40801 1.78265 4.45828 1.383 5.50855 1.383C6.55882 1.383 7.60909 1.78265 8.42358 2.58195L10.4812 4.58019L12.5389 2.56091C14.1465 0.983348 16.7829 0.983348 18.369 2.56091C19.1406 3.31814 19.5907 4.32778 19.5907 5.42156C19.5907 6.51534 19.162 7.52498 18.369 8.28221L10.4812 16.0438L2.59352 8.30324C1.82189 7.52498 1.37178 6.51534 1.37178 5.44259Z"
-                      fill="black"
-                    />
-                  </svg>
+                <button
+                  aria-label="like"
+                  class="card__like-button"
+                  type="button"
+                >
+                  <img
+                    src="./images/heart.svg"
+                    alt="heart icon"
+                    class="like-button"
+                  />
                 </button>
               </div>
             </li>
