--- a/index.html
+++ b/index.html
@@ -186,5 +186,6 @@
         <p class="footer__content">© 2022 Around The U.S.</p>
       </footer>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
