--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <img
                 src="./images/edit-button.svg"
                 alt="pencil icon"
-                class="edit-button"
+                class="profile__edit-button-img"
               />
             </button>
             <div class="modal modal_opened">
@@ -51,7 +51,7 @@
                   <img
                     src="./images/close-button.svg"
                     alt="close icon"
-                    class="close-button"
+                    class="modal__close-button-img"
                   />
                 </button>
                 <h2 class="modal__title">Edit Profile</h2>
@@ -86,7 +86,7 @@
             <img
               src="./images/add-button.svg"
               alt="plus icon"
-              class="add-button"
+              class="profile__add-button-img"
             />
           </button>
         </section>
@@ -108,7 +108,7 @@
                   <img
                     src="./images/heart.svg"
                     alt="heart icon"
-                    class="like-button"
+                    class="card__like-button-img"
                   />
                 </button>
               </div>
@@ -129,7 +129,7 @@
                   <img
                     src="./images/heart.svg"
                     alt="heart icon"
-                    class="like-button"
+                    class="card__like-button-img"
                   />
                 </button>
               </div>
@@ -150,7 +150,7 @@
                   <img
                     src="./images/heart.svg"
                     alt="heart icon"
-                    class="like-button"
+                    class="card__like-button-img"
                   />
                 </button>
               </div>
@@ -171,7 +171,7 @@
                   <img
                     src="./images/heart.svg"
                     alt="heart icon"
-                    class="like-button"
+                    class="card__like-button-img"
                   />
                 </button>
               </div>
@@ -192,7 +192,7 @@
                   <img
                     src="./images/heart.svg"
                     alt="heart icon"
-                    class="like-button"
+                    class="card__like-button-img"
                   />
                 </button>
               </div>
@@ -213,7 +213,7 @@
                   <img
                     src="./images/heart.svg"
                     alt="heart icon"
-                    class="like-button"
+                    class="card__like-button-img"
                   />
                 </button>
               </div>
