--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 class="profile__edit-button-img"
               />
             </button>
-            <div class="modal modal_opened">
+            <div class="modal">
               <div class="modal__container">
                 <button
                   aria-label="close"
