fix modal error

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   />
                 </button>
                 <h2 class="modal__title">Edit Profile</h2>
-                <form class="modal__form form">
+                <form id="modal form" class="modal__form form">
                   <fieldset class="form__fieldset">
                     <label class="form__label">
                       <input
