--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <label class="form__label">
                       <input
                         type="text"
-                        class="form__input"
+                        class="form__input form__input_type_name"
                         placeholder="Name"
                         required
                       />
@@ -68,7 +68,7 @@
                     <label class="form__label">
                       <input
                         type="text"
-                        class="form__input"
+                        class="form__input form__input_type_description"
                         placeholder="Description"
                         required
                       />
