--- a/index.html
+++ b/index.html
@@ -201,7 +201,6 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./pages/index.js"></script>
   </body>
 </html>
