refactor: create popup and child classes

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <div class="page__content">
       <header class="header">
         <img
-          src="./images/header.svg"
+          src="<%=require(`./images/header.svg`)%>"
           alt="Around the U.S. logo"
           class="header__logo"
           aria-label="aroundtheus-logo"
@@ -25,7 +25,7 @@
       <main class="content">
         <section class="profile">
           <img
-            src="./images/jacques-cousteau.jpg"
+            src="<%=require(`./images/jacques-cousteau.jpg`)%>"
             alt="photo of Jacques Cousteau"
             class="profile__avatar"
           />
@@ -37,7 +37,7 @@
               type="button"
             >
               <img
-                src="./images/edit-button.svg"
+                src="<%=require(`./images/edit-button.svg`)%>"
                 alt="pencil icon"
                 class="profile__edit-button-img"
               />
@@ -51,7 +51,7 @@
                   type="button"
                 >
                   <img
-                    src="./images/close-button.svg"
+                    src="<%=require(`./images/close-button.svg`)%>"
                     alt="close icon"
                     class="modal__close-button-img"
                   />
@@ -102,7 +102,7 @@
           </div>
           <button aria-label="add" class="profile__add-button" type="button">
             <img
-              src="./images/add-button.svg"
+              src="<%=require(`./images/add-button.svg`)%>"
               alt="plus icon"
               class="profile__add-button-img"
             />
@@ -116,7 +116,7 @@
                 type="button"
               >
                 <img
-                  src="./images/close-button.svg"
+                  src="<%=require(`./images/close-button.svg`)%>"
                   alt="close icon"
                   class="modal__close-button-img"
                 />
@@ -173,7 +173,7 @@
                 type="button"
               >
                 <img
-                  src="./images/close-button.svg"
+                  src="<%=require(`./images/close-button.svg`)%>"
                   alt="close icon"
                   class="modal__close-button-img"
                 />
