refactor: update editProfile and addCard popup in index.js

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,7 @@
                     <label class="form__label">
                       <input
                         id="name-input"
+                        name="name"
                         type="text"
                         class="form__input form__input_type_name"
                         placeholder="Name"
@@ -79,6 +80,7 @@
                     <label class="form__label">
                       <input
                         id="desc-input"
+                        name="description"
                         type="text"
                         class="form__input form__input_type_description"
                         placeholder="Description"
@@ -132,6 +134,7 @@
                   <label class="form__label">
                     <input
                       id="title-input"
+                      name="name"
                       type="text"
                       class="form__input form__input_type_title"
                       placeholder="title"
@@ -144,6 +147,7 @@
                   <label class="form__label">
                     <input
                       id="url-input"
+                      name="link"
                       type="url"
                       class="form__input form__input_type_url"
                       placeholder="Image URL"
